# zsofiav1.github.io

./: CNAME  README.md  _index.html  index.html  index_debug.html  index_hyper.html  index_tetra.html  index_unfold.html  octa_script.js  script.js  script_tetra.js  script_unfold.js  try_impress_index.html
pages/: projects.html
pages/cgol/: index.html  index.js
pages/cgol/wasm-cgol/: Cargo.toml
pages/emb_pattern/: Cargo.toml
pages/emb_pattern/page/: index.html  script.js
pages/lettershape/: index.html  script.js  style.css
pages/lettershape/pkg/: README.md  lettershape.d.ts  lettershape.js  lettershape_bg.wasm  lettershape_bg.wasm.d.ts
pages/lettershape/src/: lib.rs
pages/tesselation/: Cargo.toml
pages/tesselation/src/: main.rs
pages/tesselations/: README.md
projects/emb_pattern/: Cargo.toml
projects/emb_pattern/page/: index.html  python.py  script.js
projects/emb_pattern/src/: lib.rs  main.rs
projects/letterbox/: .gitignore  Cargo.toml  benchmark.ps1
projects/letterbox/data/: word_list_no_repeat.txt
projects/letterbox/page/: index.html  (+1 more)
projects/lettershape/: .gitignore  Cargo.toml  README.md  build.bat  index.html  script.js  style.css
projects/lettershape/data/: wordlist.txt
projects/lettershape/page/: index.html  script.js
projects/lettershape/page/pkg/: lettershape.d.ts  lettershape.js  lettershape_bg.wasm  lettershape_bg.wasm.d.ts  package.json
projects/lettershape/pkg/: lettershape.d.ts  lettershape.js  lettershape_bg.wasm  lettershape_bg.wasm.d.ts
projects/lettershape/src/: lib.rs  main_v1.rs
stylesheets/: main.css
(+17 files in other folders)
