[package]
name = "lettershape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.2"