[package]
name = "lettershape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwasm = "0.2"
js-sys = "0.3.65"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.2"